--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,112 @@
       <nav>
         <a href=".">Web<span>Studio</span></a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
+    <main>
+      <h1>Портфолио</h1>
+      <!-- Buttons list -->
+      <ul>
+        <li>
+          <button type="button">Все</button>
+        </li>
+        <li>
+          <button type="button">Веб-сайты</button>
+        </li>
+        <li>
+          <button type="button">Приложения</button>
+        </li>
+        <li>
+          <button type="button">Дизайн</button>
+        </li>
+        <li>
+          <button type="button">Маркетинг</button>
+        </li>
+        <!-- list of portfolio samples -->
+      </ul>
+      <li>
+        <a href="">
+          <img src="./images/technocrack.jpeg" alt="laptop" width="370px" />
+          <h2>Технокряк</h2>
+          <p>Веб-сайт</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img
+            src="./images/neworleanvsgoldenstar.jpeg"
+            alt="basketball"
+            width="370px"
+          />
+          <h2>Постер New Orlean vs Golden Star</h2>
+          <p>Дизайн</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/seafood.jpeg" alt="fish" width="370px" />
+          <h2>Ресторан Seafood</h2>
+          <p>Приложение</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img
+            src="./images/project_prime.jpeg"
+            alt="headphones"
+            width="370px"
+          />
+          <h2>Проект Prime</h2>
+          <p>Маркетинг</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/project_boxes.jpeg" alt="boxes" width="370px" />
+          <h2>Проект Boxes</h2>
+          <p>Приложение</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img
+            src="./images/inspiration_noborders.jpeg"
+            alt="computer"
+            width="370px"
+          />
+          <h2>Inspiration has no Borders</h2>
+          <p>Веб-сайт</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/limited_edition.jpeg" alt="book" width="370px" />
+          <h2>Издание Limited Edition</h2>
+          <p>Дизайн</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/project_lab.jpeg" alt="label" width="370px" />
+          <h2>Проект LAB</h2>
+          <p>Маркетинг</p>
+        </a>
+      </li>
+      <li>
+        <a href="">
+          <img src="./images/growin_business.jpeg" alt="laptop" width="370px" />
+          <h2>Growing Business</h2>
+          <p>Приложение</p>
+        </a>
+      </li>
+      <ul></ul>
+    </main>
     <footer>
       <a href=".">Web<span>Studio</span></a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
