--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href=".">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
         <ul>
           <li><a href="./index.html">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
