--- a/portfolio.html
+++ b/portfolio.html
@@ -40,82 +40,87 @@
         </li>
         <!-- list of portfolio samples -->
       </ul>
-      <li>
-        <a href="">
-          <img src="./images/technocrack.jpeg" alt="laptop" width="370px" />
-          <h2>Технокряк</h2>
-          <p>Веб-сайт</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img
-            src="./images/neworleanvsgoldenstar.jpeg"
-            alt="basketball"
-            width="370px"
-          />
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p>Дизайн</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/seafood.jpeg" alt="fish" width="370px" />
-          <h2>Ресторан Seafood</h2>
-          <p>Приложение</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img
-            src="./images/project_prime.jpeg"
-            alt="headphones"
-            width="370px"
-          />
-          <h2>Проект Prime</h2>
-          <p>Маркетинг</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/project_boxes.jpeg" alt="boxes" width="370px" />
-          <h2>Проект Boxes</h2>
-          <p>Приложение</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img
-            src="./images/inspiration_noborders.jpeg"
-            alt="computer"
-            width="370px"
-          />
-          <h2>Inspiration has no Borders</h2>
-          <p>Веб-сайт</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/limited_edition.jpeg" alt="book" width="370px" />
-          <h2>Издание Limited Edition</h2>
-          <p>Дизайн</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/project_lab.jpeg" alt="label" width="370px" />
-          <h2>Проект LAB</h2>
-          <p>Маркетинг</p>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <img src="./images/growin_business.jpeg" alt="laptop" width="370px" />
-          <h2>Growing Business</h2>
-          <p>Приложение</p>
-        </a>
-      </li>
-      <ul></ul>
+      <ul>
+        <li>
+          <a href="">
+            <img src="./images/technocrack.jpeg" alt="laptop" width="370px" />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/neworleanvsgoldenstar.jpeg"
+              alt="basketball"
+              width="370px"
+            />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/seafood.jpeg" alt="fish" width="370px" />
+            <h2>Ресторан Seafood</h2>
+            <p>Приложение</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/project_prime.jpeg"
+              alt="headphones"
+              width="370px"
+            />
+            <h2>Проект Prime</h2>
+            <p>Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/project_boxes.jpeg" alt="boxes" width="370px" />
+            <h2>Проект Boxes</h2>
+            <p>Приложение</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/inspiration_noborders.jpeg"
+              alt="computer"
+              width="370px"
+            />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/limited_edition.jpeg" alt="book" width="370px" />
+            <h2>Издание Limited Edition</h2>
+            <p>Дизайн</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="./images/project_lab.jpeg" alt="label" width="370px" />
+            <h2>Проект LAB</h2>
+            <p>Маркетинг</p>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img
+              src="./images/growin_business.jpeg"
+              alt="laptop"
+              width="370px"
+            />
+            <h2>Growing Business</h2>
+            <p>Приложение</p>
+          </a>
+        </li>
+      </ul>
     </main>
     <footer>
       <a href=".">Web<span>Studio</span></a>
