--- a/index.html
+++ b/index.html
@@ -5,50 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <nav>
         <a href="./index.html" class="logo">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="contacts"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="section hero">
+        <h1 class="hero-title">Эффективные решения </br> для вашего бизнеса</h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
-      <section>
-        <ul>
+      <section class="section advantages">
+        <ul class="advantages-list list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -56,10 +63,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section features">
+        <h2 class="title">Чем мы занимаемся</h2>
         <div>
-          <ul>
+          <ul class="features-list list">
             <li>
               <img width="370px" src="./images/box_1.jpeg" alt="layout" />
             </li>
@@ -76,37 +83,37 @@
           </ul>
         </div>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="section team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="team-list list">
           <li>
             <img width="270px" src="./images/team_1.jpeg" alt="ihor" />
-            <p>Игорь Демьяненко</p>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img width="270px" src="./images/team_2.jpeg" alt="olha" />
-            <p>Ольга Репина</p>
+            <h3 class="title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img width="270px" src="./images/team_3.jpeg" alt="nick" />
-            <p>Николай Тарасов</p>
+            <h3 class="title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img width="270px" src="./images/team_4.jpeg" alt="michael" />
-            <p>Михаил Ермаков</p>
+            <h3 class="title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href=".">Web<span>Studio</span></a>
+    <footer class="footer">
+      <a href="." class="logo">Web<span>Studio</span></a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <a href="mailto:info@example.com" class="contacts">info@example.com</a>
+      <a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a>
     </footer>
   </body>
 </html>
