--- a/portfolio.html
+++ b/portfolio.html
@@ -24,19 +24,19 @@
       <!-- Buttons list -->
       <ul>
         <li>
-          <button type="button">Все</button>
+          <button class="button" type="button">Все</button>
         </li>
         <li>
-          <button type="button">Веб-сайты</button>
+          <button class="button" type="button">Веб-сайты</button>
         </li>
         <li>
-          <button type="button">Приложения</button>
+          <button class="button" type="button">Приложения</button>
         </li>
         <li>
-          <button type="button">Дизайн</button>
+          <button class="button" type="button">Дизайн</button>
         </li>
         <li>
-          <button type="button">Маркетинг</button>
+          <button class="button" type="button">Маркетинг</button>
         </li>
         <!-- list of portfolio samples -->
       </ul>
