--- a/portfolio.html
+++ b/portfolio.html
@@ -5,128 +5,147 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <nav>
-        <a href=".">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo">Web<span>Studio</span></a>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="contacts"
+        >info@devstudio.com</a
+      >
+      <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
     </header>
     <main>
       <h1>Портфолио</h1>
       <!-- Buttons list -->
-      <ul>
-        <li>
-          <button class="button" type="button">Все</button>
-        </li>
-        <li>
-          <button class="button" type="button">Веб-сайты</button>
-        </li>
-        <li>
-          <button class="button" type="button">Приложения</button>
-        </li>
-        <li>
-          <button class="button" type="button">Дизайн</button>
-        </li>
-        <li>
-          <button class="button" type="button">Маркетинг</button>
-        </li>
-        <!-- list of portfolio samples -->
-      </ul>
-      <ul>
-        <li>
-          <a href="">
-            <img src="./images/technocrack.jpeg" alt="laptop" width="370px" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/neworleanvsgoldenstar.jpeg"
-              alt="basketball"
-              width="370px"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/seafood.jpeg" alt="fish" width="370px" />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/project_prime.jpeg"
-              alt="headphones"
-              width="370px"
-            />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project_boxes.jpeg" alt="boxes" width="370px" />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/inspiration_noborders.jpeg"
-              alt="computer"
-              width="370px"
-            />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/limited_edition.jpeg" alt="book" width="370px" />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/project_lab.jpeg" alt="label" width="370px" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/growin_business.jpeg"
-              alt="laptop"
-              width="370px"
-            />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
-          </a>
-        </li>
-      </ul>
+      <section class="section portfolio">
+        <ul class="portfolio-list list">
+          <li>
+            <button class="button" type="button">Все</button>
+          </li>
+          <li>
+            <button class="button" type="button">Веб-сайты</button>
+          </li>
+          <li>
+            <button class="button" type="button">Приложения</button>
+          </li>
+          <li>
+            <button class="button" type="button">Дизайн</button>
+          </li>
+          <li>
+            <button class="button" type="button">Маркетинг</button>
+          </li>
+        </ul>
+      </section>
+      <!-- list of portfolio samples -->
+      <section class="section samples">
+        <ul class="samples-list list">
+          <li>
+            <a href="">
+              <img src="./images/technocrack.jpeg" alt="laptop" width="370px" />
+              <h2 class="title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/neworleanvsgoldenstar.jpeg"
+                alt="basketball"
+                width="370px"
+              />
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/seafood.jpeg" alt="fish" width="370px" />
+              <h2 class="title">Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/project_prime.jpeg"
+                alt="headphones"
+                width="370px"
+              />
+              <h2 class="title">Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/project_boxes.jpeg"
+                alt="boxes"
+                width="370px"
+              />
+              <h2 class="title">Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/inspiration_noborders.jpeg"
+                alt="computer"
+                width="370px"
+              />
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/limited_edition.jpeg"
+                alt="book"
+                width="370px"
+              />
+              <h2 class="title">Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/project_lab.jpeg" alt="label" width="370px" />
+              <h2 class="title">Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/growin_business.jpeg"
+                alt="laptop"
+                width="370px"
+              />
+              <h2 class="title">Growing Business</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href=".">Web<span>Studio</span></a>
+    <footer class="footer">
+      <a href="." class="logo">Web<span>Studio</span></a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <a href="mailto:info@example.com" class="contacts">info@example.com</a>
+      <a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a>
     </footer>
   </body>
 </html>
