--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="page-header">
       <nav>
-        <a href="./index.html" class="logo">Web<span>Studio</span></a>
+        <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
@@ -110,7 +110,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="." class="logo">Web<span>Studio</span></a>
+      <a href="./index.html" class="logo"><span>Web</span>Studio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@example.com" class="contacts">info@example.com</a>
       <a href="tel:+380991111111" class="contacts">+38 099 111 11 11</a>
